Adding the ability to measure memory usage at dev time.